# CameraProject

./: .gitignore
Camera/: SftpUpload.sh
Camera/ImageProcess/: CMakeLists.txt
Camera/ImageProcess/src/: CMakeLists.txt  FaceLandmark.cpp  FaceLandmark.hpp  demo.cpp
Camera/RTPserver/: CMakeLists.txt  main.cpp
Controller/: CMakeLists.txt  rtsp_server.cpp
